--- a/views/index.ejs
+++ b/views/index.ejs
@@ -149,6 +149,7 @@
     <div id="footer">
             <p style="font-size:15px; font-family:Comic Sans MS;">Contact: Tran Le Anh Tuan - <a href="tuantla80@gmail.com">tuantla80@gmail.com</a> - (82) -
                 10 6481 2305</p>
+            <p style="font-size:15px; font-family:Comic Sans MS;">Copyright 2019</p>
     </div><!--// footer -->
 
 </div>
