--- a/views/about/about.ejs
+++ b/views/about/about.ejs
@@ -86,17 +86,16 @@ Open a browser and go to  http://localhost:3000  </pre>
 Note: If you are installing git in Windows, you need to check the option for git bash.
 Below is some basic git command lines
 > git --version
-> git init  // to set up a new repository
-> notepad .gitignore  // add content node_modules/ to ignore all node_modules files
-> git status // to check the current status
-> git add .  // to add all folders and files into the repository
-> git add routes/   //to get all files in routers into the reposistory
-> git commit -m "Init commit"
-> git add app.js  (or git add . )  // Use this after changing app.js file
-> git commit -m "remove a console.log"
-> git push
-> git remote
-> git push heroku master </pre>
+> git init               // to set up a new repository
+> notepad .gitignore     // add content node_modules/ to ignore all node_modules files
+> git status             // to check the current status
+> git add .              // to add all folders and files into the repository
+> git add routes/        // to add all files in routers into the repository
+> git add app.js         // to add app.js into the repository
+> git commit -m "content of comment"
+> git push               // push to github
+> git remote             // list all remote such as git and heroku
+> git push heroku master // to push into heroku</pre>
             </ul>
         <li>SSH (Secured Shell) Keys</li>
         Note: In Windows, you need to use Git Bash
