--- a/views/about/about.ejs
+++ b/views/about/about.ejs
@@ -94,7 +94,7 @@ Below is some basic git command lines
 > git add app.js         // to add app.js into the repository
 > git commit -m "content of comment"
 > git push               // push to github
-> git remote             // list all remote such as git and heroku
+> git remote             // list all remote such as heroku and origin
 > git push heroku master // to push into heroku</pre>
             </ul>
         <li>SSH (Secured Shell) Keys</li>
