--- a/views/cv/Tuan_CV.ejs
+++ b/views/cv/Tuan_CV.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+href<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -82,7 +82,9 @@
                         <div class="col-md-5">
                             <div class="person_img">
                                 <img src="images/CV_img/photo/Tuan-photo.jpg" alt="" width="325px" height="430px">
-                                <a class="download_btn" href="pdf/Tuan_CV.pdf"><span>Download Full CV</span></a>
+                                <a class="download_btn" href="#"><span>Download Full CV</span></a>
+                                <!--<a class="download_btn" href="pdf/Tuan_CV.pdf"><span>Download Full CV</span></a>-->
+                                <!--Not support download CV from (190425) -->
                             </div>
                         </div>
                         <div class="col-md-7">
